修改了swagger框架一些内容,基本环境搭建完成

--- a/pom.xml
+++ b/pom.xml
@@ -56,14 +56,13 @@
 <!--    接口相关-->
     <dependency>
       <groupId>io.springfox</groupId>
-      <artifactId>springfox-boot-starter</artifactId>
-      <version>3.0.0</version>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.9.2</version>
     </dependency>
-<!--swagger依赖与google的guava-->
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>25.1-jre</version>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.9.2</version>
     </dependency>
   </dependencies>
 
